--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
       font-weight: bold;
       transition: transform 0.2s, box-shadow 0.2s;
       position: relative;
+      min-width: 140px;
     }
     
     .btn:hover {
@@ -94,7 +95,6 @@
     .btn-no {
       background: linear-gradient(135deg, #eb3349, #f45c43);
       color: white;
-      position: absolute;
       user-select: none;
       touch-action: none;
     }
