--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       <div class="foto-fondo novia"></div>
     </div>
     <h1>¡Felicidades! 🎉</h1>
-    <p>¡El 23 te casas! 💒❤️</p>
+    <p>¡El 23 de Mayo te casas! 💒❤️</p>
     <div class="corazones" id="corazones"></div>
   </div>
 
